fix(tooltip): fix tooltip position when element its wrapped by a absolute position div.

--- a/projects/truly-ui/src/components/tooltip/tooltip.scss
+++ b/projects/truly-ui/src/components/tooltip/tooltip.scss
@@ -18,9 +18,9 @@
 }
 
 .tooltip-text {
+  position: fixed;
   padding: 5px;
   color: #FFF;
-  position: absolute;
   display: inline-block;
   z-index: 10000;
   border-radius: 3px;
